<resources>

    <!-- App -->
    <string name="app_name">Chrissi Island</string>
    <string name="content_description">image</string>

    <!-- Fragments names -->
    <string name="frag_one">Welcome</string>
    <string name="frag_two">Island Tour</string>
    <string name="frag_three">Travel</string>
    <string name="frag_four">Highlights</string>
    <string name="frag_five">Rules</string>

    <!-- Welcome page -->
    <string name="welcome_title">Are you ready for an adventure?</string>
    <string name="welcome_message">Do you want to feel for a while like a modern castaway, stranded on a desert island?</string>
    <string name="welcome_button">Yes</string>

    <!-- Welcome fragment -->
    <string name="welcome0">Then visit Chrissi Island.</string>
    <string name="welcome1">Chrissi Island, also known as Chryssi or Gaidouronnisi, is a secluded, isolated, almost tropical island on the most southern end of Crete.</string>
    <string name="welcome2">Chrissi is a piece of paradise on Earth. It is the southernmost natural park of Europe, and a gem of the Mediterranean.</string>
    <string name="welcome_section">Chrissi Island.</string>

    <!-- About fragment -->
    <string name="about0">The island of Chrissi is situated approximately 9 nautical miles south of Lerapetra</string>
    <string name="about1">Due to its incredible natural beauty and important ecosystem, it is under the protection of the European initiative NATURA 2000, as a wildlife refuge and an "area of intense natural beauty".</string>
    <string name="about2">The island is only an hour cruise away from the port of Lerapetra.</string>
    <string name="about3">It has an area of 4,743 square kilometers, and a maximum altitude of 27 meters.</string>
    <string name="about4">It\'s an islet known for its exotic waters in all the shades of blue and green.</string>
    <string name="about5">The golden beaches, made of fossilized shell beach is where the island got it name from.</string>
    <string name="about6">The island has a Cedar forrest which extends to the center of Chrissi, covering an area of 350,000 square meters, which is one-fourth of the island.</string>
    <string name="about7">The island Cedar forrest are protected and are over 200-300 years old.</string>
    <string name="about8">The island as a spectacular collection of mainly grey-green, reddish-brown and black rocks.</string>
    <string name="about9">The base rocks of Chrissi were created through the solidification of lava that poured out of an undersea volcano millions of years ago.</string>
    <string name="about10">The 49 species of fossils (corals, shells, barnacles, urchins) found on the island comes from the sea.</string>
    <string name="about11">The northern shores of the island are Belegrina, Hatzivolakas, and Kataprosopo, and are filled with shells.</string>
    <string name="about12">The scenic chapel of Agios Nikolaos and the island\'s lighthouse are located West of Hatzivolakas.</string>
    <string name="about13">On the northeast of the church, there is an old salt marsh and the island\'s only house, bulit atop of ancient remnants.</string>
    <string name="about14">There a wells and carved tombs on the south and southwest of Agios Nikolaos, with the biggest tomb dating back to the Roman era.</string>
    <string name="about15">Kataprosopo faces the Mikronisi islet, on the east of Chrissi, and is a habitat for thousands of birds.</string>

    <!-- Travel fragment -->
    <string name="travels0">To visit Chrissi you can take one of the boats that make the route from Lerapetra</string>
    <string name="travels1">Chrissi Daily Cruises, organises daily cruises from the port of Ierapetra to the island of Chrissi".</string>
    <string name="travels2">Chrissi Daily Cruises depart daily from May to October, departing from 10.00am until 13.00pm.</string>
    <string name="travels3">The Municipality of Ierapetra collects 1 euro from every ticket, as an administrative fee for passengers over 4 years old visiting the island of Chrissi.</string>
    <string name="travels4">There is a free parking area at the port of Lerapetra.</string>
    <string name="travels5">The trip from the port of Lerapetra to the exotic Chrissi lasts about an hour, sometimes accompanied by seagulls and dolphins.</string>
    <string name="travels6">The self-service bar of the ship shall remain open throughout the cruise, offering light meals, with salads, wine, soft drinks, coffee, ice creams, etc.</string>
    <string name="travels7">Tickets can be purchase from varying tour agency across Crete and local touring office in Lerapetra.</string>
    <string name="travels8">The ticket price includes 24% VAT, all legal fees, and a written guided tour in your language.</string>

    <!-- Highlights fragment -->
    <string name="highlights0">There\'s a eatery place on the island where you can get hot food and drinks</string>
    <string name="highlights1">Umbrellas and sunbeds are also available on the island for a fee</string>
    <string name="highlights2">The Municipality collection of 1 euro contribute towards protecting the island</string>
    <string name="highlights3">There are vendors where you can buy items made from fossils found on the island</string>
    <string name="highlights4">Portable toilets are also available on the island for free, please make use of it</string>
    <string name="highlights5">Hammocks can be found in some area of the island, use accordingly</string>
    <string name="highlights6">Local touring offices will have details for transfers if you are from areas outside Lerapetra</string>
    <string name="highlights7">Bin\'s are provided on the island, empty all rubbish there and not on the island</string>

    <!-- Rules fragment -->
    <string name="rules0">Smoking around bushes and woodlands are prohibited or starting a fire</string>
    <string name="rules1">Hiking outside the designated paths and beaches are prohibited</string>
    <string name="rules2">Collection of rocks, fossils, shells and ancient finds are prohibited</string>
    <string name="rules3">Collection of plants or any animal catching are prohibited</string>
    <string name="rules4">Free camping on the island in the evening and overnight are also prohibited</string>
    <string name="rules5">Any kind of pollution are prohibited, bins and toilets are provided</string>
    <string name="rules6">Make sure you are back at your boat 10 at least 10 minutes before departure</string>
    <string name="rules7">Make sure you don\'t swim out too far in the waters into the ocean</string>

</resources>
